--- a/index.html
+++ b/index.html
@@ -7,5 +7,52 @@
   </head>
   <body>
     <h1>ito-mirai</h1>
+
+    <h2>About</h2>
+    <p>
+      Webサービスを提供する会社の駆け出しエンジニア、<br>
+      良い生活ができるように。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>ITO-MIRAI</li>
+      <li>東京都　国分寺</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>言語</th>
+        <td>python, JavaScript</td>
+      </tr>
+      <tr>
+        <th>Tool, MiddleWare</th>
+        <td>Git, Notion</td>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td>ITパスポート</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <ul>
+      <li><a href="https://github.com/ito-mirai">GitHub</a></li>
+      </li>
+    </ul>
+
+    <h3>Contact</h3>
+    <ul>
+      <li><a href="https://twitter.com/home">X（twitter）</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <table>
+      <tr>
+        <th>2024 年</th>
+        <p>恵比寿のWebサービス会社に就職。</p>
+      </tr>
+    </table>
   </body>
 </html>
